# be/src/routes/auth.ts
@@ -5,6 +5,6 @@ const router = Router();
 
 router.post('/register', AuthController.register);
 router.post('/login', AuthController.login);
-router.post('/refresh-token', AuthController.refreshToken);
+
 
 export default router;
