# be/src/routes/users.ts
@@ -1,8 +1,0 @@
-import { Router } from 'express';
-import { createEarlyAccessUser } from '../controllers/users';
-
-const router = Router();
-
-router.post('/early-access-users', createEarlyAccessUser);
-
-export default router;
